--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <body>
         <h1>The Ball Game</h1>
         <div class="ball" onclick="onBallClick()">100</div>
+        
+        <script src="js/util.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
