--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>The Ball Game</h1>
         <div class="ball" onclick="onBallClick()">100</div>
+        <div class="ball2" onclick="onBallClick()">100</div>
         
         <script src="js/util.js"></script>
         <script src="js/main.js"></script>
