--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <body>
         <h1>The Ball Game</h1>
-        <div class="ball" onclick="onBallClick()">100</div>
-        <div class="ball2" onclick="onBallClick()">100</div>
+        <div class="ball1" onclick="onBallClick(1)">100</div>
+        <div class="ball2" onclick="onBallClick(2)">100</div>
         
         <script src="js/util.js"></script>
         <script src="js/main.js"></script>
