--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="ball1" onclick="onBallClick(this)">100</div>
         <div class="ball2" onclick="onBallClick(this)">100</div>
         <div class="ball3" onclick="onSwitchAttributes()">100</div>
-        
+        <div>bleep bloop</div>
         <script src="js/util.js"></script>
         <script src="js/main.js"></script>
     </body>
