--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <h1>The Ball Game</h1>
         <div class="ball1" onclick="onBallClick(this)">100</div>
         <div class="ball2" onclick="onBallClick(this)">100</div>
-        <div class="ball3" onclick="onSwitchAttributes()">100</div>
-        <div>bleep bloop</div>
+        <div class="ball3" onclick="onSwitchAttributes()">Switch</div>
+        <div class="ball4" onclick="onReduceBallsSize()">Reduce Size</div>
+
         <script src="js/util.js"></script>
         <script src="js/main.js"></script>
     </body>
